<resources>
    <string name="app_name">LastPlayed</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_user">You</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Last.fm username or e-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Field cannot be empty</string>
    <string name="invalid_password">Field cannot be empty</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_continue_without_signing_in">Continue without signing in</string>
    <string name="text_geo_top_tracks">Top Tracks in %s</string>
    <string name="text_geo_top_artists">Top Artists in %s</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_artist">Artist</string>
    <string name="track_image_contentDescription">The track image or album cover</string>
    <string-array name="search_options">
        <item>Album</item>
        <item>Artist</item>
        <item>Track</item>
    </string-array>
    <string name="lastfm_signup_url">https://www.last.fm/join</string>

    <string name="menu_info">Info</string>
    <string name="menu_settings">Settings</string>

    <string name="alert_not_logged_in_title">Alert</string>
    <string name="alert_not_logged_in">You will miss out the full experience if you do not log in. Continue?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Search preferences -->

    <string name="search_header">Search</string>
    <string name="limit_title">Search limit</string>
    <string name="application_id_placeholder">App</string>
    <string name="version_name_placeholder">Version name</string>
    <string name="version_code_placeholder">Version code</string>
    <string name="build_type_placeholder">Build type</string>
    <string name="text_sign_up">Sign up</string>
    <string name="general_header">General</string>
    <string name="alert_when_not_logged_in_title">Alert when not logged in</string>
    <string name="occasional_reminder_title">Remind to rate the app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rate_app_dialog_title">Rate my app</string>
    <string name="rate_app_dialog_tell_us">Tell me about your experience so far</string>
    <string name="rate_app_dialog_source">How did you hear about this app?</string>
    <string name="source_friends">Friends/Family</string>
    <string name="source_website">Website</string>
    <string name="source_app_store">App store</string>
    <string name="source_csc_214">CSC 214</string>
    <string name="source_other">Other</string>
    <string name="rating_contentDescription">Rate my app</string>
    <string name="text_cancel_rating">No thanks</string>
    <string name="submit_rating">Rate</string>
</resources>