<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/search_result_imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:contentDescription="@string/track_image_contentDescription"
            app:srcCompat="@drawable/ic_music_note" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/search_result_title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/search_result_artist_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_artist"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>